# DesignPatternCPP

./: CMakeLists.txt
src/: main.cpp
src/Observer/: observer.cpp  observer.h
src/Singleton/: singleton-v2.cpp  singleton.cpp  singleton.h
src/Strategy/: strategy.cpp  strategy.h
